--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -3,9 +3,9 @@
 // * COLOR DEFINITIONS
 // *
 
-@color: #FF002B;
+@color: #1EEDE2;
 
-@black: #000;
+@black: #444;
 @white: #FFF;
 
 @mobile-break: 450px;
