--- a/src/less/modules/footer.less
+++ b/src/less/modules/footer.less
@@ -4,7 +4,7 @@ body > footer {
     h6 {
         margin-top: 10px;
 
-        #webfont.khula(100);
+        #webfont.sans(100);
         font-size: 1em;
 
         text-align: center;
