--- a/src/less/base/typography.less
+++ b/src/less/base/typography.less
@@ -3,28 +3,24 @@
 // * TYPOGRAPHY DEFINITIONS
 // *
 
-@import url('https://fonts.googleapis.com/css?family=Passion+One:400,700,900|Khula:400,300,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,500,700,600|Bree+Serif|Quicksand:400,700,300');
 
 #webfont {
-    // PASSION ONE WEBFONT ******************************************************
-
-    .passion(@weight: 0) { // basics
-        font-family: 'Passion One', sans-serif;
+    .sans(@weight: 0) { // basics
+        font-family: 'Open Sans', sans-serif;
         font-weight: @weight;
         font-style: normal;
     }
 
-    // KHULA WEBFONT ************************************************************
-
-    .khula(@weight: 0) { // basics
-        font-family: 'Khula', sans-serif;
+    .quicksand(@weight: 0) { // basics
+        font-family: 'Quicksand', sans-serif;
         font-weight: @weight;
         font-style: normal;
     }
 }
 
 a {
-    color: @color;
+    color: desaturate(@color, 25%);
     text-decoration: none;
 
     transition: none ease .15s;
@@ -32,7 +28,7 @@ a {
 
     &:focus,
     &:hover {
-        color: lighten(@color, 10%);
+        color: @color;
         text-decoration: underline;
     }
 }
@@ -48,17 +44,14 @@ ul {
     width: 100%;
 
     li {
-        max-width: 50%;
         position: relative;
 
         list-style-type: square;
 
         span.clamped {
-            position: absolute;
-            left: 50%;
-            width: 200%;
-
             color: mix(@black, @white, 75%);
+            margin-left: .25em;
+            font-size: .75em;
 
             &:before { content: '('; }
             &:after { content: ')'; }
