--- a/src/less/modules/header.less
+++ b/src/less/modules/header.less
@@ -4,54 +4,89 @@
 // *
 
 body > header {
-    background-image: linear-gradient(lighten(@black, 5%), @black);
-    text-align: center;
+    position: relative;
     padding: 50px 0;
+
+    background: url(https://unsplash.it/1000/500?random) no-repeat center;
+    background-size: cover;
+
+    animation: imgLoad linear 1s forwards;
+
+    text-align: center;
+
+    // load a low-quality image for mobile
+    @media (max-width: @mobile-break) {
+        background-image: url(https://unsplash.it/110/200?random&blur);
+    }
+
+    &:before {
+        content: 'Image hostet by unsplash.it';
+        position: absolute;
+        padding: 10px;
+
+        text-align: left;
+        #webfont.sans(300);
+        font-size: 13px;
+
+        color: fade(@white, 45%);
+
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        background: linear-gradient(fade(@black, 25%), @black);
+    }
+
+    img {
+        position: relative;
+        display: block;
+        margin: 50px auto;
+
+        border-radius: 1000px;
+        box-shadow: 0 0 3px @black;
+
+        @media (max-width: @mobile-break) {
+            margin: 10px auto 30px auto;
+        }
+    }
 
     h1 {
         display: inline-block;
-        border: 3px solid @white;
+        position: relative;
         margin: 0;
 
         cursor: default;
         user-select: none;
 
-        #webfont.passion(700);
+        #webfont.quicksand(700);
         text-align: center;
 
-        font-size: 7rem;
+        font-size: 5rem;
         text-transform: uppercase;
-
-        line-height: .9em;
-        letter-spacing: .15em;
-
-        background-color: @white;
-        color: @black;
+        text-shadow: 0 0 3px @black;
 
         span {
-            #webfont.passion(400);
-            letter-spacing: 0;
-
-            display: block;
-            padding: 0 .4em;
-
-            background-color: @black;
-            color: @white;
+            #webfont.quicksand(300);
+            color: fade(@white, 75%);
         }
 
         @media (max-width: @mobile-break) {
-            font-size: 6rem;
-            font-size: 25vw;
+            font-size: 20vw;
+            line-height: 1em;
         }
     }
 
     h2 {
+        position: relative;
+
         letter-spacing: .06em;
         margin: .25em 0;
         text-transform: uppercase;
-        color: mix(@white, @black);
+        color: fade(@white, 65%);
+        text-shadow: 0 0 3px @black;
 
-        #webfont.khula(300);
+        #webfont.quicksand(300);
 
         @media (max-width: @mobile-break) {
             font-size: 1rem;
