--- a/src/global/style/2generic/_setup.scss
+++ b/src/global/style/2generic/_setup.scss
@@ -40,8 +40,8 @@
     --blue: #ffa000;
     --red: #1976d2;
 
-    --blue-transparency: #{rgba(#ffa000, 0.06)};
-    --red-transparency: #{rgba(#009de0, 0.12)};
+    --blue-transparency: #{rgba(#ff1e00, 0.24)};
+    --red-transparency: #{rgba(#009de0, 0.16)};
 
     --light-transparency: #{rgba(#fff, 0.3)};
     --dark-transparency: #{rgba(#333, 0.2)};
