--- a/src/components/core/ms-icon/ms-icon.css
+++ b/src/components/core/ms-icon/ms-icon.css
@@ -1,3 +1,9 @@
 ms-icon {
-    /* Component styles go here */
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
 }
