fix(icons): Centerize icons better

--- a/src/global/style/4objects/_button.scss
+++ b/src/global/style/4objects/_button.scss
@@ -7,6 +7,7 @@
 
   font-size: 110%;
   letter-spacing: 0.05rem;
+  line-height: 0.4;
 
   background-color: var(--blue-transparency);
   border: 0.2rem solid transparent;
