feat(seo): Better var initialization & small UI changes

--- a/src/global/style/3elements/_font-face.scss
+++ b/src/global/style/3elements/_font-face.scss
@@ -1,7 +1,7 @@
 %heading {
   font-size: 1.6rem;
   font-weight: normal;
-  font-family: "Overpass", sans-serif;
+  font-family: "Overpass", system-ui, sans-serif;
 
   letter-spacing: -0.025em;
   line-height: 1.7;
