--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,13 +4,13 @@
   </h1>
   <nav>
     <ul>
-      <li>
+      <li class="not-available">
         <a onclick="go('/stack')">stack</a>
       </li>
-      <li>
+      <li class="not-available">
         <a onclick="go('/about')">about</a>
       </li>
-      <li>
+      <li class="not-available">
         <a onclick="go('/contact')">contact</a>
       </li>
     </ul>
