--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -27,3 +27,8 @@
     place-content: center;
     place-items: center;
 }
+
+.not-available {
+	text-decoration: line-through;
+	cursor: not-allowed;
+}
