--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -81,11 +81,10 @@ footer {
 		}
 	}
 
-	li {
-		line-height: 1.5;
-	}
-
 	a {
+		display: inline-block;
+		padding: .3em;
+
 		font-weight: 400;
 		color: inherit;
 	}
