--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,12 @@
 <footer>
   <ul>
     <li>
-      <a href="mailto:me@maxscopp.de" target="_blank">mail</a>
-    </li>
-    <li>
       <a href="https://www.linkedin.com/in/max-scopp/" target="_blank"
         >linkedin</a
       >
+    </li>
+    <li>
+      <a href="https://codepen.io/max-scopp" target="_blank">codepen</a>
     </li>
     <li>
       <a href="https://github.com/max-scopp" target="_blank">github</a>
