--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,14 +4,14 @@
   </h1>
   <nav>
     <ul>
-      <li class="not-available">
+      <li>
         <a onclick="go('/stack')">stack</a>
       </li>
-      <li class="not-available">
+      <li>
         <a onclick="go('/about')">about</a>
       </li>
-      <li class="not-available">
-        <a onclick="go('/contact')">contact</a>
+      <li>
+        <a onclick="go('/legal')">legal</a>
       </li>
     </ul>
   </nav>
