--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -1,44 +1,188 @@
-
 a {
-    cursor: pointer;
+  cursor: pointer;
 
-	color: var(--primary);
-	text-decoration: none;
-	font-weight: 500;
+  color: var(--primary);
+  text-decoration: none;
+  font-weight: 500;
 
-	will-change: color;
-	user-select: none;
+  will-change: color;
+  user-select: none;
 
-	&:not(:hover) {
-		transition: color ease-out 600ms;
-	}
+  &:not(:hover) {
+    transition: color ease-out 600ms;
+  }
 
-	&:hover {
-		color: var(--primary-secondary);
-	}
+  &:hover {
+    color: var(--primary-secondary);
+  }
 
-	&[target="_blank"] {
-		&::after {
-			content: "";
-			display: inline-block;
+  &[target="_blank"] {
+    &::after {
+      content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 24 24'%3E%3Cpath fill='white' d='M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z'/%3E%3C/svg%3E");
 
-			pointer-events: none;
+      @media screen and (prefers-color-scheme: light) {
+        content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 24 24'%3E%3Cpath d='M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z'/%3E%3C/svg%3E");
+      }
 
-			background-image: url("data:image/svg+xml,%3Csvg height='1024' width='768' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E @media (prefers-color-scheme: dark) %7B%0Apath %7B%0Afill: white;%0A%7D %3C/style%3E%3Cpath d='M640 768H128V257.90599999999995L256 256V128H0v768h768V576H640V768zM384 128l128 128L320 448l128 128 192-192 128 128V128H384z'/%3E%3C/svg%3E");
-			background-size: contain;
-			background-repeat: no-repeat;
-			background-position: center;
+      display: inline-block;
 
-			margin: 0 .1em;
-			padding: .24em;
+      margin: 0 0.1em;
+      padding: 0.24em;
 
-			opacity: 0.3;
-		}
-	}
+      font-size: 40%;
+
+      pointer-events: none;
+      opacity: 0.4;
+    }
+  }
 }
 
 ul {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+p {
+  font-weight: 400;
+  line-height: 1.4;
+
+  font-size: 1.6rem;
+}
+
+@media screen and (max-width: $break-small) {
+  p,
+  ul,
+  ol {
+    font-size: 2rem;
+  }
+}
+
+h2 > span {
+  display: inline-block;
+  margin-right: 0.4ch;
+  animation: slide-up ease-out 200ms forwards;
+  opacity: 0;
+
+  @for $i from 1 through 20 {
+    &:nth-child(#{$i}) {
+      animation-delay: #{$i * 20}ms;
+    }
+  }
+}
+
+h3 {
+  margin-top: 0;
+
+  animation: slide-up ease-out 200ms forwards;
+  opacity: 0;
+}
+
+button {
+  cursor: pointer;
+
+  border: none;
+  background: transparent;
+  color: inherit;
+  border-radius: 0.4rem;
+  padding: 0.4em;
+
+  transition: all ease-out 120ms;
+  line-height: 0.6;
+
+  &:hover {
+    background: rgba(var(--primary-rgb));
+    color: var(--primary-contrast);
+  }
+}
+
+header {
+  position: sticky;
+  top: 0;
+
+  z-index: 1;
+
+  padding: 1rem 3rem;
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+
+  background: linear-gradient(
+      0deg,
+      rgba(var(--scheme-rgb), 0),
+      var(--scheme) 100%
+    ),
+    linear-gradient(0deg, rgba(var(--scheme-rgb), 0) 10%, var(--scheme));
+
+  > h1 {
+    font-size: 2.4rem;
+    font-weight: 400;
+
+    a {
+      color: inherit;
+
+      &:hover {
+        color: var(--dark-secondary);
+      }
+    }
+  }
+
+  > nav {
+    > ul {
+      display: flex;
+
+      a {
+        margin: 1ch;
+      }
+    }
+  }
+}
+
+main {
+}
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr minmax(auto, 72%);
+
+  justify-content: space-between;
+
+  padding: 4rem 3rem;
+  font-size: 2.4rem;
+
+  color: var(--scheme-medium);
+
+  #footer {
+    display: flex;
+    justify-content: end;
+    align-items: start;
+
+    a {
+      font-size: 1.6rem;
+
+      &::after {
+        content: " →";
+        color: inherit;
+        opacity: 0.3;
+      }
+    }
+  }
+
+  a {
+    display: inline-block;
+    padding: 0.3em;
+
+    font-weight: 400;
+    color: inherit;
+  }
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(50%);
+  }
+  to {
+    opacity: 1;
+  }
 }
