--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,90 +2,4 @@
 @import "setup";
 @import "elements";
 @import "components";
-
-header {
-	position: sticky;
-	top: 0;
-
-	padding: 1rem 3rem;
-	display: flex;
-
-	justify-content: space-between;
-	align-items: center;
-
-	background:
-		linear-gradient(0deg, rgba(var(--scheme-rgb), 0), var(--scheme) 100%),
-		linear-gradient(0deg, rgba(var(--scheme-rgb), 0) 10%, var(--scheme));
-
-	> h1 {
-		font-size: 2.4rem;
-		font-weight: 400;
-
-		a {
-			color: inherit;
-
-			&:hover {
-				color: var(--dark-secondary);
-			}
-		}
-	}
-
-	> nav {
-		> ul {
-			display: flex;
-
-			a {
-				margin: 1ch;
-			}
-		}
-	}
-}
-
-main {
-	&.home {
-		padding: 6rem;
-		max-width: 48rem;
-
-		h2 {
-			font-size: 3.2rem;
-		}
-
-		h3 {
-			font-weight: 500;
-			font-size: 1.4rem;
-
-			color: mix(black, white, 40%);
-
-			margin-bottom: 3em;
-		}
-	}
-}
-
-footer {
-	display: flex;
-	justify-content: space-between;
-
-	padding: 4rem 3rem;
-	font-size: 2.4rem;
-
-	#footer {
-		a {
-			font-size: 1.6rem;
-			color: gray;
-
-			&::after {
-				content:  " →";
-				color: inherit;
-				opacity: 0.3;
-			}
-		}
-	}
-
-	a {
-		display: inline-block;
-		padding: .3em;
-
-		font-weight: 400;
-		color: inherit;
-	}
-}
+@import "pages/all";
